# deremas-wiki

./: .gitignore  LICENSE  Pipfile  pyproject.toml  run.sh  scrapy.cfg  setup.cfg
deremas_data/: items.py  middlewares.py  pipelines.py  settings.py
deremas_data/spiders/: deremas_spider.py  extract_util.py
