[tool.poetry]
name = "deremas-wiki"
version = "0.1.0"
description = ""
authors = ["nagomiso <daiseigi.giants+github@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.4.1"
neologdn = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
